// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Renderers/BooleanRenderer Boolean Renderer 1`] = `
<span
  className="magic-boolean"
>
  Yes
</span>
`;

exports[`Storyshots Renderers/BooleanRenderer Falsy 1`] = `
<span
  className="magic-boolean"
>
  No
</span>
`;

exports[`Storyshots Renderers/BooleanRenderer Truthy 1`] = `
<span
  className="magic-boolean"
>
  Yes
</span>
`;

exports[`Storyshots Renderers/BooleanRenderer With Context Overrides 1`] = `
<span
  className="magic-boolean"
>
  i think not
</span>
`;

exports[`Storyshots Renderers/BooleanRenderer With Overrides 1`] = `
<span
  className="magic-boolean"
>
  Nope
</span>
`;
